src/routes/layout.scss
main {
  position: relative;
  z-index: 1;
  align-self: flex-start;
  width: calc(100% - var(--glyph-space-x) * 4);
  max-width: calc(var(--glyph-cell-width) * var(--main-glyph-columns));
  min-height: calc(100vh - var(--glyph-space-y) * 2);
  margin: 0 calc(var(--glyph-space-x) * 2) var(--glyph-space-y);
  padding: 0 calc(var(--glyph-space-x) * 2) var(--glyph-space-y);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;

  &:not(.is-homepage) {
    flex: 1;
  }

  &.is-homepage {
    align-self: stretch;
    width: 100%;
    max-width: none;
    min-height: 100vh;
    margin: 0;
    padding: var(--glyph-space-y) calc(var(--glyph-space-x) * 2);
  }
}

